# near-collections-issue

./: Cargo.toml  build.sh
res/: near_collections_issues.wasm
src/: lib.rs
