[package]
name = "near-collections-issues"
version = "0.0.1"
authors = ["Mike Purvis <mike@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
borsh = "0.6.2"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
